# product-graph

./: .gitignore  Cargo.toml  Makefile  OLD_flake.nix  README.md  chatGPTAnswers.txt  flake.nix  fly.toml  history.txt
infrastructure/fly/: Dockerfile.GraphQL  fly.toml
src/: lib.rs  main.rs  schema.rs  services.rs  transformers.rs  types.rs
src/schema/: new_inventory.rs  new_price.rs  price.rs  product.rs  view_price.rs  view_product.rs
src/services/: echo.rs  graph.rs  product.rs
src/services/graph/: schema.rs
src/services/graph/schema/: view_product.rs
src/services/product/: create.rs  mutate.rs  query.rs  types.rs
src/services/product/types/: price.rs  product.rs  query_result.rs
src/transformers/: price.rs  product.rs  view_product.rs
src/types/: context.rs  error.rs  localised_string.rs  new_product.rs  price.rs  product.rs  query_result.rs  view_price.rs  view_product.rs
