[package]
name = "product-graph"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.9"
actix-web-lab = "0.22"
actix-cors = "0.7"
juniper = "0.16"
tokio = { version = "1.39", features = ["macros"] }
env_logger = "0.11"
log = "0.4"
# reqwest = { version = "0.11", default-features = false, features = [
#     "json",
#     "rustls-tls",
# ] }
base64 = "0.22"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
surrealdb = "1"

# once_cell = "1"
# [profile.release]
# opt-level = 'z'
