[package]
name = "product-graph"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
actix-cors = "0.7"
actix-web = "4.9"
actix-web-lab = "0.23"
env_logger = "0.11"
juniper = "0.16"
log = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
surrealdb = { version = "2", features = ["kv-mem"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros"] }

[profile.release]
opt-level = 'z'
