[package]
name = "product-graph"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
actix-cors = "0.7"
actix-web = "4.10"
env_logger = "0.11"
juniper = "0.16"
log = "0.4"
surrealdb = { version = "2", features = ["kv-mem"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros"] }

[profile.release]
opt-level = 'z'
